# data_science_package

./: README.md  pyproject.toml
data_science_package/: holiday_names.json  requirements.txt  sn_data_science_package.py  sn_event_explorer.py  sn_util.py  utils.py
data_science_package/eventfiles/: champions_league.csv  holidays.csv
